--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "^15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "styled-components": "^6.1.17",
     "tailwindcss": "^4.0.14",
